@@ -18,13 +18,22 @@
 
 2020-11-02 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/stm8/gen.c,
+	  support/regression/tests/bug-3141.c:
+	  Fix bug #3141.
+	* src/z80/gen.c,
+	  support/regression/tests/shifts2.c:
+	  Fix bug #3142.
+
+2020-11-02 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/z80/main.c:
 	  Enable array initalizer support for gbz80 in arrayinit branch.
 
 2020-11-02 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/main.c:
-	  Disable array initalizer support for gbz80 in trunk, so the remining issues can be worked out in a branch instead.
+	  Disable array initalizer support for gbz80 in trunk, so the remaining issues can be worked out in a branch instead.
 
 2020-10-29 Philipp Klaus Krause <pkk AT spth.de>
 
